# PocketRocket

./: .gitignore  Cargo.toml  Config.toml  Rocket.toml
schema/: 01_users.sql  02_collections.sql
scripts/: start_db_shell.sh  start_local_db.sh
src/: api.rs  database.rs  main.rs
src/api/: error.rs  mod.rs
src/database/: mod.rs
