[package]
name = "pocket-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
serde = "1.0.193"
figment = "0.10.12"
toml = "0.8.8"
mysql = "24.0.0"
password-hash = "0.5.0"
log = "0.4.20"
