[package]
name = "pocket-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_db_pools = { version = "0.1.0", features = ["sqlx_mysql"] }
serde = "1.0.193"
serde_json = "1.0.108"
figment = "0.10.12"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "migrate"] }
password-hash = "0.5.0"
log = "0.4.20"
